--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,14 +29,17 @@ p {
     font-weight: 400;
 }
 
+.sect-vh {
+    display: flex;
+    align-items: center;
+    height: 90vh;
+}
+
 /* estilos secao topo da pagina */
 .section-top-main {
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.4)100%), url(../images/desktop/image-hero.jpg) no-repeat;
     background-size: cover;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 90vh;
 }
 
 .section-top-main .nav-bar {
@@ -57,8 +60,6 @@ p {
 .section-top-main .nav-bar .sections {
     display: flex;
     gap: 50px;
-    position: fixed;
-    right: 13%;
 }
 
 .section-top-main .nav-bar .sections p a {
@@ -87,6 +88,24 @@ p {
     text-transform: uppercase;
 }
 
+/* secao sobre */
+.section-about-main {
+    border: 1px solid black;
+    justify-content: center;
+}
 
+.section-about-main .content-about {
+    width: 75%;
+    display: flex;
+    border: 1px solid red;
+}
+
+.info-about h2 {
+    color: var(--Black);
+}
+
+.info-about p {
+    color: var(--Dark-Gray);
+}
 /* Mobile: 375px
 - Desktop: 1440px */
