--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -90,22 +90,49 @@ p {
 
 /* secao sobre */
 .section-about-main {
-    border: 1px solid black;
     justify-content: center;
 }
 
 .section-about-main .content-about {
     width: 75%;
     display: flex;
-    border: 1px solid red;
+    align-items: center;
 }
 
-.info-about h2 {
+.section-about-main .content-about figure {
+    width: 70%;
+}
+
+.section-about-main .content-about figure img {
+    width: 100%;
+}
+
+.section-about-main .content-about .info-about {
+    background-color: white;
+    z-index: 1;
+    width: 41%;
+    position: absolute;
+    top: 125%;
+    right: 5%;
+    padding: 100px 100px 100px 130px;
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    
+}
+
+.section-about-main .content-about .info-about h2 {
     color: var(--Black);
+    font-size: 60px;
+    text-transform: uppercase;
 }
 
-.info-about p {
+.section-about-main .content-about .info-about p {
     color: var(--Dark-Gray);
+    font-size: 19px;
+    line-height: 30px;
 }
+
 /* Mobile: 375px
-- Desktop: 1440px */
+- Desktop: 1440px 
+*/
