--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -151,7 +151,10 @@ p {
 
 /* Seção grade de imagens */
 .section-grid-images {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 170vh;
 }
 
 .section-grid-images .content-grid {
@@ -259,7 +262,7 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: var(--White);
     opacity: 0;
     z-index: 0;
 }
@@ -281,6 +284,54 @@ p {
     padding: 0 65px 20px 20px;
     z-index: 1;
 }
+
+/* Rodapé da página */
+.footer-content {
+    background-color: var(--Black);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-content .size-limit {
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+    padding: 70px 0;
+}
+
+/* navegação do rodapé */
+.footer-content .size-limit .nav-bar {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.footer-content .size-limit .icons {
+    align-items: end;
+}
+
+.footer-content .size-limit .nav-bar .sections {
+    display: flex;
+    gap: 30px;
+}
+
+.footer-content .size-limit .nav-bar .sections p a {
+    color: var(--White);
+    text-decoration: none;
+}
+
+.footer-content .size-limit .nav-bar .sections p a:hover {
+    transition: all 300ms ease-in-out;
+    padding-bottom: 10px;
+    border-bottom: white 2px solid;
+}
+
+.footer-content .size-limit .nav-bar p {
+    color: var(--Dark-Gray);
+}
+
 
 /* Mobile: 375px
 - Desktop: 1440px 
