--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -116,6 +116,10 @@ p {
 .section-about-main .limit-vw figure img {
     width: 100%;
 }
+/* Troca de <img> - (mobile = last-child) - */
+.section-about-main .limit-vw figure img:last-child {
+    display: none;
+}
 
 /* texto */
 .section-about-main .limit-vw .info-about {
@@ -129,7 +133,6 @@ p {
     width: 41%;
     gap: 45px;
     padding: 100px 100px 100px 130px;
-
 }
 
 .section-about-main .limit-vw .info-about h2 {
@@ -149,7 +152,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 170vh;
+    min-height: 170vh;
 }
 
 /* Título e botão da seção */
@@ -191,6 +194,7 @@ p {
     grid-template-columns: 0fr 0fr 0fr 0fr;
     row-gap: 50px;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /* backgrounds da seção grid */
