--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -135,4 +135,23 @@
     .limit-vw h1 {
         width: 100%;
     }
+
+    .section-about-main .limit-vw {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .section-about-main .limit-vw .info-about {
+        align-items: center;
+        text-align: center;
+        position: static;
+        width: 70%;
+        gap: 20px;
+        padding: 0;
+    }
 }
+
+@media (max-width: 1149px) {}
+/* max-width: 1149px imagem do topo, grid, footer*/
