--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -159,12 +159,16 @@
 
 @media (max-width: 1149px) {
     .limit-vw {
-        width: 75%;
+        width: 85%;
     }
 
     .section-top-main {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)100%), url(../images/mobile/image-hero.jpg) no-repeat;
         background-size: cover;
+    }
+
+    .section-top-main .nav-bar span {
+        right: 5%;
     }
 
     .section-grid-images .our-creations {
@@ -237,4 +241,64 @@
     }
 }
 
-/* max-width: 770px */
+@media (max-width: 770px) {
+    .section-top-main .nav-bar .logo {
+        height: 35px;
+    }
+
+    .limit-vw h1 {
+        font-size: 55px;
+    }
+
+    .section-about-main .limit-vw figure {
+        width: 85%;
+    }
+
+    .section-about-main .limit-vw .info-about {
+        width: 80%;
+    }
+
+    .section-grid-images .our-creations h2 {
+        font-size: 50px;
+    }
+
+    .section-grid-images .grid-imgs {
+        margin-top: 60px;
+    }
+}
+
+@media (max-width: 580px) {
+    .limit-vw h1 {
+        font-size: 45px;
+    }
+
+    .section-about-main .limit-vw figure {
+        width: 100%;
+    }
+
+    .section-about-main .limit-vw .info-about h2 {
+        font-size: 35px;
+    }
+
+    .section-grid-images .grid-imgs {
+        grid-auto-rows: 10%;
+    }
+
+    .section-grid-images .our-creations h2 {
+        font-size: 38px;
+    }
+
+    .section-grid-images .grid-imgs .figures {
+        max-height: 180px;
+    }
+}
+
+@media (max-width: 435px) {
+    .limit-vw h1 {
+        font-size: 35px;
+    }
+
+    .section-about-main .limit-vw .info-about h2 {
+        font-size: 30px;
+    }
+}
